
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_red"
    tools:context=".Appointment_activity" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip"
        android:orientation="vertical" >
        
        <TextView 
	        android:id="@+id/appointment_label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:keepScreenOn="true"
	        android:text="@string/appointment_label"
	        android:textColor="@color/white"
	        android:textSize="26sp"
	        android:textStyle="bold" />
        <TextView
                android:id="@+id/donator"
			    android:layout_width="wrap_content"
			    android:layout_height="26sp"
			    android:layout_marginTop="20dip"
			    android:gravity="left"
			    android:keepScreenOn="true"
			    android:text="@string/donator"
			    android:textColor="@color/white"
			    android:textSize="26sp"
			    android:textStyle="bold" />
        
    	<RelativeLayout
    	    android:layout_width="match_parent"
    	    android:layout_height="40dip"
    	    android:gravity="center"
    	    android:orientation="horizontal" >
            
            <CheckBox
	            android:id="@+id/relative"
	            android:layout_width="wrap_content"
	            android:layout_height="26sp"
	            android:gravity="center"
	            android:text="@string/relative"
	            android:textColor="@color/white"
	            android:textStyle="normal"
	            android:textSize="26sp"
	            android:onClick="onCheckboxClicked"/>
	        <CheckBox
	            android:id="@+id/volunteer"
	            android:layout_width="wrap_content"
	            android:layout_height="26sp"
	            android:gravity="center"
	            android:layout_toRightOf="@id/relative"
	            android:text="@string/volunteer"
	            android:textColor="@color/white"
	            android:textStyle="normal"
	            android:textSize="26sp"
	            android:onClick="onCheckboxClicked"/>
	    </RelativeLayout>
	    
    	<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

	        <TextView
            	android:id="@+id/blood_group"
	            android:layout_width="match_parent"
	            android:layout_height="26sp"
	            android:layout_alignParentBottom="true"
	            android:layout_alignParentTop="true"
	            android:gravity="left"
	            android:keepScreenOn="true"
	            android:text="@string/blood_group"
	            android:textColor="@color/white"
	            android:textSize="26sp"
	            android:textStyle="bold" />
	                
            </RelativeLayout>
            
            <Spinner
                android:id="@+id/spinner_group"
                android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:gravity="center"
                android:text="@string/group" />

	        <Spinner
	            android:id="@+id/spinner_rhezus"
	            android:layout_width="wrap_content"
	            android:layout_height="40dip"
	            android:gravity="center"
	            android:text="@string/rhezus" />

	        <DatePicker
	            android:id="@+id/datePicker_appointment"
	            android:layout_width="match_parent"
	            android:layout_height="40dip" />
	        
	        <Spinner 
	            android:id="@+id/spinner_time"
	            android:layout_width="wrap_content"	  
	            android:layout_height="40dip"
	            android:gravity="center"
	            android:text="@string/hour"
	            android:textColor="@color/white"/>
	              
	        <Spinner
	            android:id="@+id/spinner_locale"
	            android:layout_width="wrap_content"
	            android:layout_height="40dip"
	            android:gravity="center"
	            android:text="@string/locality_label"
	            android:textColor="@color/white"/>
	        
	        <Button
	            android:id="@+id/register_button"
	            style="?buttonBarButtonStyle"
	            android:layout_width="match_parent"
	            android:layout_height="20dip"
	            android:layout_weight="0.22"
	            android:text="@string/register_button"
	            android:textSize="24sp"
	            android:textStyle="bold" />
  
    	</LinearLayout>

</FrameLayout>
